# tarako-back

./: .gitignore  README.md  THIS_PR_NEED_CLOSE  openapi.yaml  pyproject.toml  setup.cfg  template.yaml
.github/workflows/: create-staging_dev.yaml  create_staging_for_PR.yaml  delete-stack-on-pr-close.yaml  delete-stack-template.yaml  delete_stack_on_pr_close.yaml  deploy_aws_on_dev.yaml  deploy_job_template.yaml  deploy_when_PR.yaml  linter.yaml
app/chat/: get_all_chat_history.py  get_single_user_chat_history.py  post_chat.py
app/diary/sections/: delete_entry.py  get_all_sections_list.py  get_entry.py  get_single_section_list.py  post_entry.py  put_entry.py
app/diary/users/: delete_entry.py  get_all_users_list.py  get_entry.py  get_single_user_list.py  post_entry.py  put_entry.py
app/sections/: get_entry.py  get_list.py  post.py  put.py
app/tasks/: delete.py  get_entry.py  get_list.py  get_task.py  post.py  put.py
app/users/: get_list.py  get_user.py  post.py  put.py
layer/: chat_util.py  data_formatter.py  requirements.txt  responses.py  send_email.py  send_mail.py  table_utils.py  validation.py
script/: init_table.py  query_test.py
script/init_items/: user_diary_table.json
